# ConversQL

./: .dockerignore  Dockerfile  README.md  api_optimized_api.py  pyproject.toml  sqlcheckmcpserver.py
html/: test.html  test2.html
